# AI-Budget-Model

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
Daro (Model2)/: UserInput_LoadModel.py  linear_model_lag_features.ipynb  optimized_xgb_spending_model.joblib
Full flow (Model 1,2,3)/: README.md  pipeline.ipynb  tfidf_expense_classifier.joblib
model 2 (Daro)/: monthly_spending_upgraded.ipynb
models/: tfidf_expense_classifier.joblib
notebooks/training/: README.md  expense_classification_models.ipynb  export_tfidf_model.py  personal_expense.ipynb
services/model-api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
services/model-api/app/: __init__.py  main.py
services/model-api/app/core/: api_utils.py  dashboard.py  forecast.py  insights.py  model.py
services/model-api/app/schemas/: category_map.py  transaction.py
services/model-api/app/utils/: text.py
services/model-api/model_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/telegram-bot/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
services/telegram-bot/bot/: main.py
services/telegram-bot/bot/config/: __init__.py  settings.py
services/telegram-bot/bot/db_pkg/: __init__.py  database.py
services/telegram-bot/bot/handlers_pkg/: __init__.py  commands.py  files.py
services/telegram-bot/bot/handlers_pkg/destroy_pkg/: __init__.py  destroy.py
services/telegram-bot/bot/utils_pkg/: __init__.py  common.py
