[project]
name = "model-api"
version = "0.1.0"
description = "HTTP API for expense category prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "joblib>=1.4.0",
    "pydantic>=2.11.0",
]
