[project]
name = "model-api"
version = "0.1.0"
description = "HTTP API for expense category prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "uvicorn>=0.35.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "scipy>=1.16.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"
